Basic ZFS Pool information

--- a/design/templates/submenu.html
+++ b/design/templates/submenu.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="btn-group">
-	{% for name,url in menu_items.items %}
-		<a class="btn btn-default" href="{{url}}">{{name}}</a>
+	{% for item in menu_items %}
+		<a class="btn btn-default" href="{{item.url}}">{{item.name}}</a>
 	{% endfor %}
 	</div>
 </div>
